Refactor: Remove SteelSeriesIntegration and UpdateManager classes; add CompanionApp and HealthChecker for API health monitoring
- Deleted SteelSeriesIntegration.java and UpdateManager.java as part of refactoring.
- Introduced CompanionApp.java for monitoring the health of the API at api.servicegest.ro.
- Added HealthChecker.java to handle HTTP requests and verify API response status.
- Implemented system tray functionality in CompanionApp for background monitoring.
- Created troubleshoot.bat script for troubleshooting application launch issues.